fixed wrap size 👍

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -19,5 +19,5 @@ input {
 }
 .wrapper {
 	display: inline-flex;
-	padding: 25px;
+	padding: 15px;
 }
